--- a/selenium-attendance.yml
+++ b/selenium-attendance.yml
@@ -2,8 +2,8 @@ name: Selenium Attendance Automation
 
 on:
   schedule:
-    - cron: '30 4 * * 1-5'  # 10:00 AM IST (converted to 4:30 AM UTC)
-    - cron: '45 13 * * 1-5'  # 7:15 PM IST (converted to 1:45 PM UTC)
+    - cron: '30 4 * * 1-6'  # 10:00 AM IST, Monday to Saturday (converted to 4:30 AM UTC)
+    - cron: '45 13 * * 1-6'  # 7:15 PM IST, Monday to Saturday (converted to 1:45 PM UTC)
   workflow_dispatch:  # Enables the "Run workflow" button for manual trigger
 
 jobs:
